--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -31,9 +31,9 @@ jobs:
           git config --global user.name "GuizhanBot"
           git config --global user.email "${{ secrets.BOT_EMAIL }}"
         
-      - name: Run script
+      - name: Pull source translations
         working-directory: script
-        run: uv run script
+        run: uv run script pull_sources
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           
